--- a/pom.xml
+++ b/pom.xml
@@ -48,5 +48,10 @@
             <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.code.gson</groupId>-->
+<!--            <artifactId>gson</artifactId>-->
+<!--            <version>2.10</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
